# network-monitor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build-macos.sh  deny.toml  network-monitor-gtk.py  network-monitor.desktop  network-monitor.py  pyproject.toml
.github/workflows/: release.yml  rust.yml  security.yml
scripts/: install.sh  uninstall.sh
src/: error.rs  error_tests.rs  main.rs  tui_main.rs
src/models/: connection.rs  mod.rs
src/services/: mod.rs  network.rs  network_tests.rs  process_cache.rs  resolver.rs  tests.rs
src/ui/: mod.rs  styles.css  window.rs
src/utils/: formatter.rs  mod.rs  parsing.rs  recovery.rs
