[package]
name = "network-monitor"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Luigi Maselli <grigio.org@gmail.com>"]
description = "A network monitoring application built with Rust and GTK4"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_14"] }
adw = { version = "0.8", features = ["v1_5"], package = "libadwaita" }
glib = "0.21"
gio = "0.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
socket2 = "0.6"
netlink-sys = "0.8"
netlink-packet-route = "0.20"
netlink-packet-core = "0.7"
libc = "0.2"
