[package]
name = "network-monitor"
version = "0.3.5"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Luigi Maselli <grigio.org@gmail.com>"]
description = "A network monitoring application built with Rust and GTK4"
default-run = "network-monitor"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_14"] }
adw = { version = "0.8", features = ["v1_5"], package = "libadwaita" }
glib = "0.21"
gio = "0.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
thiserror = "1.0"
socket2 = "0.6"
libc = "0.2"
crossterm = "0.28"
tui = { package = "ratatui", version = "0.29" }

[[bin]]
name = "nmt"
path = "src/tui_main.rs"

[[bin]]
name = "network-monitor"
path = "src/main.rs"

[package.metadata.deb]
assets = [
    ["target/release/network-monitor", "usr/bin/", "755"],
    ["network-monitor.desktop", "usr/share/applications/", "644"],
    ["icons/network-monitor.svg", "usr/share/icons/hicolor/scalable/apps/", "644"]
]
