[package]
name = "network-monitor"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Luigi Maselli <grigio.org@gmail.com>"]
description = "A network monitoring application built with Rust and GTK4"
default-run = "network-monitor"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_14"], default-features = false }
adw = { version = "0.8", features = ["v1_5"], package = "libadwaita", default-features = false }
glib = { version = "0.21", default-features = false }
gio = { version = "0.21", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync"], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", features = ["std"], default-features = false }
regex = { version = "1", default-features = false }
once_cell = { version = "1", default-features = false }
thiserror = { version = "2.0", default-features = false }
socket2 = { version = "0.6", default-features = false }
libc = { version = "0.2", default-features = false }
crossterm = { version = "0.29", features = ["event-stream", "events"], default-features = false }
unicode-width = { version = "=0.2.0", default-features = false }
tui = { package = "ratatui", version = "0.30.0-beta.0", features = ["crossterm"], default-features = false }

[[bin]]
name = "nmt"
path = "src/tui_main.rs"

[[bin]]
name = "network-monitor"
path = "src/main.rs"

[package.metadata.deb]
assets = [
    ["target/release/network-monitor", "usr/bin/", "755"],
    ["network-monitor.desktop", "usr/share/applications/", "644"],
    ["icons/network-monitor.svg", "usr/share/icons/hicolor/scalable/apps/", "644"]
]

# Security and audit configuration
[workspace.metadata.cargo-udeps]
allow = []

[workspace.metadata.cargo-audit]
ignore = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
